# QueEngine

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  build_bindings.sh
.github/workflows/: ci.yml  release-check.yml
bindings/kotlin/com/que/engine/: que_engine_ffi.kt
bindings/kotlin/uniffi/que_engine_ffi/: que_engine_ffi.kt
bindings/swift/: QueEngine.swift  QueEngineFFI.h  QueEngineFFI.modulemap  que_engine_ffi.swift  que_engine_ffiFFI.h  que_engine_ffiFFI.modulemap
crates/engine/: Cargo.toml  build.rs  instructions.sh
crates/engine/src/: lib.rs
crates/engine/src/adapters/: c2pa.rs  mod.rs
crates/engine/src/adapters/c2pa/: asset_utils.rs  cawg.rs  constants.rs  content_detection.rs  engine.rs  mod.rs  settings.rs  url_validation.rs
crates/engine/src/adapters/c2pa/engine/: bmff.rs  common.rs  ingredient.rs  mod.rs  sign.rs  verify.rs
crates/engine/src/crypto/: mod.rs  signer.rs  timestamper.rs
crates/engine/src/domain/: cawg.rs  error.rs  manifest_engine.rs  mod.rs  policy.rs  types.rs  verify.rs
crates/engine/src/domain/types/: asset.rs  config.rs  core.rs  mod.rs  trust.rs
crates/engine/tests/: adapters_stream_sign_tests.rs  advanced_assertions_tests.rs  bmff_tests.rs  c2pa_integration_tests.rs  c2pa_roundtrip.rs  cawg_identity_tests.rs  cawg_tests.rs  content_binding_tests.rs  error_tests.rs  ingredient_tests.rs  lib_api_tests.rs  manual.rs  multi_ingredient_tests.rs  settings_tests.rs  sign_manifest_tests.rs  sign_verify_tests.rs  signer_tests.rs  stream_signing.rs  stream_verification.rs  timestamper_tests.rs  trust_policy_tests.rs  verify_certificates_tests.rs  verify_detail_tests.rs  verify_embed_remote_verdict_tests.rs  verify_ingredients_tests.rs  verify_modes_tests.rs
crates/engine/tests/common/: mod.rs
crates/ffi/: Cargo.toml  build.rs  uniffi.toml
crates/ffi/src/: lib.rs
docs/: API.md  CAWG.md  FFI.md  README.md  TYPES.md  api.md  concepts.md  configuration.md  faq.md  ffi.md  getting-started.md
src/: lib.rs
