# crates/engine/Cargo.toml

[package]
name = "que-engine"
version = "0.2.0"
edition = "2021"
license = "BUSL-1.1"
description = "Que provenance engine (C2PA adapter, feature-gated signers)"

[features]
default  = ["c2pa", "openssl"]
c2pa     = ["dep:c2pa"]
openssl  = ["dep:openssl"]
local    = []            # dev signer (from files/env)
enclave  = []            # on-device signer
wasm     = []            # optional future WASM build
ffi      = []            # when building with the ffi crate
bmff = ["dep:glob"] 
remote_manifests = []    # opt-in: allow fetching remote manifests at runtime
http_urls = []           # opt-in: allow HTTP (non-HTTPS) URLs for TSA/manifests

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2.5"
once_cell = "1.18"

# Optional deps hidden behind features
c2pa = { version = "0.59", optional = true, features = [
  "file_io",
  "add_thumbnails",
  "openssl",
  "fetch_remote_manifests",
] }
openssl = { version = "0.10", optional = true }
tempfile = "3.15.0"
glob = { version = "0.3", optional = true } 

[dev-dependencies]
rcgen = { version = "0.12", features = ["pem"] }
tempfile = "3.15"
serde_json = "1"
image = "0.24"